Updated some of the text for my current position.

--- a/resume.tex
+++ b/resume.tex
@@ -126,9 +126,10 @@
 
         \workexpheader{Fall 2018-Present}{Modeling and Simulation developer}{Radiance Technologies}
         \begin{itemize}[noitemsep]
+            \item Developing and sustaining AFSIM core
             \item Supporting AFRL in the integration of MATLAB models into the AFSIM framework
-            \item Providing help desk and maintenance support for AFSIM users
-            \item Performing satellite constellation trade analysis
+            \item Providing help desk and support for AFSIM users
+            \item Using Dakota by Sandia to perform satellite constellation trade analyses
             \item TS clearance
         \end{itemize}
 
