--- a/resume.tex
+++ b/resume.tex
@@ -135,11 +135,11 @@
         \item Acted as solutions architect for various teams on the \\ AFSIM team-of-teams development effort
         \item Developed a package manager for AFSIM
         \item Developed a VSCode plugin for AFSIM, including custom parser
-        \item Designed and led development refactors of various subsystems of AFSIM, including RF sensors and Cyber
         \item Integrated missile, airframe, and sensor models, including both C++ and Simulink models, into AFSIM
         \item Led a team of software engineers in the development and sustainment of the AFSIM product
         \item Providing help desk and support for AFSIM users
         \item Supported AFRL in the creation of a space-based GMTI model in AFSIM
+        \item Redesigned AFSIM's RF subsystem to make it more physically accurate and allow users to change the fidelity of models in a fine grained manner
         \item TS/SCI clearance
     \end{itemize}
 
